# hockey_shot_analyzer

./: CMakeLists.txt  README.md
config/: scoring.conf
outputs/: metrics.csv  report_config.html  report_config.json  report_left.json
outputs/final/: report.html
outputs/tmp/: bad_header.csv  bad_stderr.txt  left_stdout.txt  report_right.html  right_stdout.txt
samples/: landmarks.csv
scripts/: analyze_video.sh  build_ubuntu.sh  run_smoke_tests.sh
src/: CsvReader.cpp  CsvReader.h  HtmlReportWriter.cpp  HtmlReportWriter.h  MathUtils.cpp  MathUtils.h  MetricsCalculator.cpp  MetricsCalculator.h  ReportWriter.cpp  ReportWriter.h  ScoringConfig.cpp  ScoringConfig.h  ShotAnalyzer.cpp  ShotAnalyzer.h  TimelineSvgWriter.cpp  TimelineSvgWriter.h  Types.h  main.cpp
src/video/: VideoPoseToLandmarks.cpp
